Add CMR tracking metric